# nebuchadnezzar

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  clippy.toml  docker-compose.yml  env.example  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  docs.yml  release.yml
babylon/: README.md  run_babylon_demo.py  setup.py
babylon/src/bmd_engine/: drug_database.py  hole_matcher.py  resonance_calculator.py  therapeutic_predictor.py
babylon/src/dynamics/: cellular_drug_response.py  molecular_drug_binding.py  organ_drug_effects.py  quantum_drug_transport.py  systemic_drug_response.py  temporal_drug_patterns.py  tissue_drug_distribution.py
babylon/src/pharmacogenonics/: genetic_risk_assessor.py  hole_detector.py  oscillatory_profiler.py
benches/: benchmarks.rs
demo/: INSTALL.md  PERSONAL_GENOME_ANALYSIS.md  README.md  requirements.txt  run_personal_analysis.py  setup.py  test_sbml_loading.py  validate_framework.py
demo/examples/: biological_oscillation_analysis.py  full_framework_validation.py  molecular_transformation_validation.py
demo/src/: circuit_representation.py  noise_portfolio.py  oscillatory_mechanics.py  personal_genome_analysis.py  precision_by_difference.py  reaction_pathways.py  s_entropy_solver.py  spatio_temporal.py
demo/src/st_stellas/: __init__.py  cli.py
docs/: Gemfile  _config.yml  api-reference.md  benchmarks.md  examples.md  getting-started.md  hegel.tex  implementation-plan.md  index.md  mufakose.tex  nebuchadnezzar.md  oscilatory-reaction-mechanisms.tex  theoretical-framework.md  turbulance-language.md
docs/_site/: biological-maxwell-demons.md  index.html  robots.txt
docs/_site/api-reference/: index.html
docs/_site/benchmarks/: index.html
docs/_site/examples/: index.html
docs/_site/fundamentals/: code.md
docs/_site/getting-started/: index.html
docs/_site/theoretical-framework/: index.html
docs/_site/turbulance-language/: index.html
docs/fundamentals/: code.md  genome-theory.tex  intracellular-dynamics.tex  membrane-dynamics.tex  membranes.md  nebuchadnezzar.tex  oscillatory-framework.tex
docs/language/: goal.md
docs/metacognitive-orchestrator/: champagne.md  clothesline.md  diadochi.md  diggiden-adversarial-system.md  five-intelligence-modules.md  gerhard.md  hegel.md  index.md  metabolism.md  mzekezeke-bayesian-engine.md  nebuchadnezzar.md  tres-commas.md  zengeza.md
docs/paradigms/: FORMAL_SPECIFICATION_PROBABILISTIC_POINTS.md  POINTS_AS_DEBATE_PLATFORMS.md  POSITIONAL_SEMANTICS_AND_STREAMING.md  PROBABILISTIC_TEXT_OPERATIONS.md  README.md  RESOLUTION_VALIDATION_THROUGH_PERTURBATION.md  REVOLUTIONARY_FRAMEWORK_OVERVIEW.md  THEORETICAL_FOUNDATIONS_POINTS_RESOLUTIONS.md  electric_circuits.md  hybrid-imperative.md
docs/st-stellas/: computational-pharmacology.tex  oscillatory-biochemistry.tex  st-stellas-circuits.tex  st-stellas-dynamics.tex  st-stellas-molecular-language.tex  universal-framework.tex
examples/: advanced_bioinformatics_integration.rs  atp_oscillatory_membrane_complete_demo.rs  comprehensive_simulation.rs  environmental_noise_biology.rs  glycolysis_circuit.rs  hardware_synchronized_biology.rs  mizraji_biological_maxwell_demons.rs  neuron_integration_demo.rs  quantum_biological_computer_demo.rs  simple_bmd_test.rs  turbulance_biological_reasoning.rs
scripts/: setup.sh
src/: atp_oscillatory_membrane_simulator.rs  atp_oscillatory_membrane_solver.rs  biological_integration.rs  biological_maxwell_demons.rs  biological_quantum_computer.rs  biological_quantum_solver.rs  entropy_manipulation.rs  error.rs  hardware_integration.rs  integration.rs  lib.rs  oscillatory_dynamics.rs  prelude.rs  quantum_membranes.rs  quantum_metabolism_analyzer.rs
src/atmospheric_processing/: entropy_oscillation.rs  mod.rs  molecular_network.rs  virtual_processors.rs
src/atp_system/: atp_pool.rs  conservation.rs  differential_solver.rs  energy_charge.rs  mod.rs
src/bmd_system/: amplification.rs  information_catalyst.rs  mod.rs  pattern_recognition.rs  target_selection.rs  thermodynamic_validation.rs
src/circuits/: biological_mapping.rs  circuit_grid.rs  enzyme_circuits.rs  fractal_circuits.rs  hierarchical_framework.rs  hierarchical_solver.rs  ion_channel.rs  mod.rs  nodal_analysis.rs  probabilistic_elements.rs  quantum_circuits.rs
src/hardware_integration/: mod.rs  noise_optimization.rs  oscillation_harvesting.rs
src/integration/: autobahn_interface.rs  bene_gesserit_interface.rs  consciousness_bridge.rs  imhotep_interface.rs  mod.rs
src/oscillatory_dynamics/: frequency_bands.rs  hardware_harvesting.rs  hierarchical_network.rs  mod.rs  phase_coupling.rs
src/quantum_membranes/: coherence_manager.rs  decoherence_dynamics.rs  ion_channels.rs  mod.rs  tunneling_transport.rs
src/solvers/: advanced_solvers.rs  mod.rs  native_solver.rs
src/systems_biology/: atp_kinetics.rs  mod.rs
src/temporal_processing/: memory_initialization.rs  mod.rs  neural_generation.rs  noise_driven_compute.rs  statistical_emergence.rs
src/turbulance/: ast.rs  compiler.rs  integration.rs  lexer.rs  mod.rs  parser.rs  runtime.rs
src/utils/: mod.rs
src/validation/: biological_ranges.rs  conservation_laws.rs  mod.rs  numerical_accuracy.rs  thermodynamic_consistency.rs
src/virtual_circulation/: boundary_exchange.rs  flow_dynamics.rs  mod.rs  noise_stratification.rs  vessel_network.rs
(+6 files in other folders)
