[package]
name = "nebuchadnezzar"
version = "0.1.0"
edition = "2021"
authors = ["Kundai Farai Sachikonye <kundai.f.sachikonye@gmail.com>"]
description = "A biological quantum computer framework using ATP as energy currency"
license = "MIT"
repository = "https://github.com/fullscreen-triangle/nebuchadnezzar"
keywords = ["quantum", "biology", "atp", "simulation", "biophysics"]
categories = ["science", "simulation"]

[dependencies]
# Linear algebra and numerical computation
ndarray = { version = "0.15", features = ["rayon"] }
nalgebra = "0.32"
num-complex = "0.4"
num-traits = "0.2"

# Parallel computation
rayon = "1.7"

# Optimization and solving
argmin = "0.8"
argmin-math = "0.3"

# Random number generation
fastrand = "2.0"
rand = "0.8"

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Scientific computing
approx = "0.5"
statrs = "0.16"

# Error handling and utilities
thiserror = "1.0"
anyhow = "1.0"

# Logging and debugging
log = "0.4"
env_logger = "0.10"

# Optional features for advanced functionality
petgraph = { version = "0.6", optional = true }
plotters = { version = "0.3", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"

[features]
default = []
visualization = ["plotters"]
graph_analysis = ["petgraph"]
full = ["visualization", "graph_analysis"]

[[example]]
name = "glycolysis_circuit"
required-features = []

[[example]]
name = "comprehensive_simulation"
required-features = []

[[example]]
name = "quantum_biological_computer_demo"
required-features = []

[[example]]
name = "atp_oscillatory_membrane_complete_demo"
required-features = []

[[example]]
name = "neuron_integration_demo"
required-features = []

[[bench]]
name = "quantum_performance"
harness = false

[[bench]]
name = "atp_solver_benchmark"
harness = false

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.test]
opt-level = 1
debug = true
