[package]
name = "nebuchadnezzar"
version = "0.1.0"
edition = "2021"
authors = ["Kundai Farai Sachikonye <kundai.sachikonye@wzw.tum.de>"]
description = "Intracellular dynamics engine using ATP-constrained computation for biologically authentic neurons"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/nebuchadnezzar"
keywords = ["biology", "simulation", "atp", "quantum", "neural"]
categories = ["science", "simulation"]

[dependencies]
# Core computational dependencies
nalgebra = "0.32"
rayon = "1.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

# Scientific computing
ndarray = "0.15"
rand = "0.8"
approx = "0.5"

# Mathematical operations
num-traits = "0.2"
num-complex = "0.4"

# Async and futures
futures = "0.3"

# Logging and error handling
log = "0.4"
thiserror = "1.0"

# Optional features for specific integrations
[dependencies.plotters]
version = "0.3"
optional = true

[features]
default = ["visualization"]
visualization = ["plotters"]
hardware-integration = []
quantum-membranes = []
consciousness-integration = []

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.0"
criterion = "0.5"

[[bench]]
name = "atp_system_bench"
harness = false

[[bench]]
name = "bmd_processing_bench" 
harness = false

[lib]
name = "nebuchadnezzar"
path = "src/lib.rs"

[[example]]
name = "basic_intracellular"
path = "examples/basic_intracellular.rs"

[[example]]
name = "neural_construction"
path = "examples/neural_construction.rs"

[[example]]
name = "bmd_processing"
path = "examples/bmd_processing.rs"

[[example]]
name = "system_integration"
path = "examples/system_integration.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]